@@ -1,11 +1,0 @@
-<?xml version="1.0"?>
-<!-- This file is part of Tryton.  The COPYRIGHT file at the top level of
-this repository contains the full copyright notices and license terms. -->
-<tree string="Request History">
-    <field name="act_from"/>
-    <field name="act_to"/>
-    <field name="name"/>
-    <field name="number_references"/>
-    <field name="date_sent"/>
-    <field name="state"/>
-</tree>
